--- a/Finalproject.html
+++ b/Finalproject.html
@@ -69,7 +69,7 @@
     <div class="footer">
         <a href="AboutUs.html" class="footerbutton">About Us</a>
         <a href="Contact.html" class="footerbutton">Contact</a>
-        <a href="relevant sites.html" class="footerbutton">More Resources</a>
+        <a href="relevantSites.html" class="footerbutton">More Resources</a>
     </div>
 </footer>
 
