--- a/Finalproject.html
+++ b/Finalproject.html
@@ -14,7 +14,7 @@
          <li><a href="project.html">Home</a></li>
          <li><a href="AboutUs.html">About</a></li>
          <li><a href="contact.html">Contact</a></li>
-         <li><a href="relevant sites.html">More Resources</a></li>
+         <li><a href="relevantSites.html">More Resources</a></li>
         </ul>
     </div>
     <div class="hero-text">
