--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="Finalproject.css">
 </head>
 <body>
     <header>
@@ -43,6 +43,6 @@
     <footer>
         <p>&copy; 2024 Travel Guidance</p>
     </footer>
-    <script src="contact.js"></script>
+    <script src="Finalproject.js"></script>
 </body>
 </html>
