href js updated

--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,6 @@
     <footer>
         <p>&copy; 2024 Travel Guidance</p>
     </footer>
-    <script src="Finalproject.js"></script>
+    <script src="contact.js"></script>
 </body>
 </html>
