max for Travel Date removed

--- a/Finalproject.html
+++ b/Finalproject.html
@@ -34,7 +34,7 @@
             </select>
             
             <label for="start-date">Travel Date:</label>
-            <input type="date" id="start-date" name="start-date" min="2024-11-30" max="2024-12-05" required>
+            <input type="date" id="start-date" name="start-date" min="2024-11-30" required>
 
             <button type="submit">Search</button>
         </form>
