GO Back Button added

--- a/contact.html
+++ b/contact.html
@@ -44,5 +44,6 @@
         <p>&copy; 2024 Travel Guidance</p>
     </footer>
     <script src="contact.js"></script>
+    <button onclick="window.history.back()">Go Back</button>
 </body>
 </html>
