--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,6 +24,7 @@
             <h3>Contact Us</h3>
             <p>If you have any questions or need assistance, feel free to <a href="contact.html">contact us</a>.</p>
         </section>
+        <button onclick="window.history.back()">Go Back</button>
     </main>
 
     <footer>
